[package]
name = "sendgrid-wasi"
version = "0.19.2"
edition = "2021"
authors = [
  "Garrett Squire <github@garrettsquire.com>",
  "DarumaDocker"
]
description = "An unofficial client library for the SendGrid API"
repository = "https://github.com/flows-network/sendgrid-rs"
license = "MIT"
homepage = "https://sendgrid.com"
keywords = ["email"]
documentation = "https://docs.rs/sendgrid"
readme = "README.md"

[lib]
name = "sendgrid"
path = "src/lib.rs"

[dependencies]
data-encoding = "2.3"
reqwest_wasi = { version = "0.11.16", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["wasmedge-tls", "async"]

async = []
wasmedge-tls = ["reqwest_wasi/wasmedge-tls"]

[[example]]
name = "v3_async"
required-features = ["async"]

[[example]]
name = "main"
required-features = ["blocking"]

[[example]]
name = "v3"
required-features = ["blocking"]
